--- a/About_us/assets/css/about_style.css
+++ b/About_us/assets/css/about_style.css
@@ -7330,6 +7330,7 @@ margin-top: 50px;
   .remaining 
   {
     padding-left:29px !important;
+    padding-bottom: 20px;
     /* padding-right:15px !important; */
   }
   .remaining p
@@ -7367,7 +7368,7 @@ margin-top: 50px;
 {
   color:#012e5b !important;
 }
-  
+
  
 
  
